<resources>
    <string name="app_name">A2</string>
    <string name="calculateButtonText">Oblicz</string>
    <string name="resultPlaceholderText">Całkowita kwota do zapłaty:</string>
    <string name="initialReceiptValueHint">Koszt jedzenia</string>
    <string name="maxTipValueHint">Maksymalny napwiek (%)</string>
    <string name="customerServiceRatingBarText">Jakość obsługi</string>
    <string name="foodQualityRatingBarText">Jakość jedzenia</string>
</resources>